k8s/test/deployment.yml
# (c) All rights reserved. ECOLE POLYTECHNIQUE FEDERALE DE LAUSANNE, Switzerland, VPSI, 2020
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: gta-api
  name: gta-api
spec:
  replicas: 1
  selector:
    app: gta-api
    deploymentconfig: gta-api
  strategy:
    activeDeadlineSeconds: 21600
    resources:
      limits:
        cpu: 1000m
        memory: 500M
      requests:
        cpu: 1000m
        memory: 500M
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      creationTimestamp: null
      labels:
        app: gta-api
        deploymentconfig: gta-api
    spec:
      containers:
        - image: >-
            docker-registry.default.svc:5000/gta-test/gta-api:develop
          imagePullPolicy: Always
          name: gta-api
          resources:
            limits:
              cpu: 1000m
              memory: 500Mi
            requests:
              cpu: 1000m
              memory: 500Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /opt/dinfo/etc
              name: volume-conf
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            name: api-config
          name: volume-conf
  test: false
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - gta-api
        from:
          kind: ImageStreamTag
          name: 'gta-api:develop'
          namespace: gta-test
      type: ImageChange
    - type: ConfigChange
