k8s/test/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gta-api-service
  labels:
    app: gta-api
  namespace: gta-test
spec:
  ports:
    - name: 5000-tcp
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    deploymentconfig: gta-api
  sessionAffinity: None
  type: ClusterIP
